--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Importando as fontes Raleway e Roboto do Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
