--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+@layer components {
+  .top-shadow {
+    box-shadow: 0 -10px 40px 10px #ffffff3d;
+  }
+}
