--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400;1,500&family=Special+Elite&display=swap');
 
 @layer components {
   .top-shadow {
-    box-shadow: 0 -10px 40px 10px #ffffff3d;
+    box-shadow: 0 -10px 40px 10px rgba(0, 0, 0, 0.2);
+  }
+  .soft-edges {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   }
 }
