--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,4 +15,10 @@
   .soft-edges {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   }
+  .cards {
+    box-shadow: 0 20px 25px -5px rgb(251 113 133 / 0.3), 0 8px 10px -6px rgb(251 113 133 / 0.2);
+  }
+  .titles {
+    box-shadow: 0 20px 25px -5px rgb(251 113 133 / 0.1), 0 8px 10px -6px rgb(251 113 133 / 0.1);
+  }
 }
